# token-saver

./: .editorconfig  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  SUPPORT.md  install.ps1  install.sh  report.md
.github/: CODEOWNERS  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/agents/: token-saver.agent.md
.github/hooks/: token-saver.json
.github/workflows/: audit.yml  ci.yml  codeql.yml  docs.yml  release.yml
docs/: README.md  book.toml
docs/src/: SUMMARY.md  architecture.md  commands.md  configuration.md  copilot.md  development.md  formatters.md  index.md  installation.md  usage.md
src/: assess.rs  banner.rs  gallery.rs  hook.rs  init.rs  lib.rs  main.rs  metrics.rs  optimize.rs  otel.rs  runner.rs  tokenizer.rs  update.rs
src/format/: cargo.rs  cloud.rs  container.rs  dotnet.rs  generic.rs  git.rs  golang.rs  java.rs  jstest.rs  mod.rs  node.rs  pkg.rs  py.rs  table.rs  ts.rs
tests/: cli.rs
