[package]
name = "tokensaver"
version = "0.1.0"
edition = "2021"
description = "A CLI proxy that runs another command and prints an extremely compact summary of its output, with no AI involved."
license = "MIT"

[[bin]]
name = "tokensaver"
path = "src/main.rs"

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"

[dependencies]
tiktoken-rs = "0.7"
