[package]
name = "token-saver"
version = "0.1.0"
edition = "2021"
description = "A CLI proxy that runs another command and prints an extremely compact summary of its output, with no AI involved."
license = "MIT"
readme = "README.md"
repository = "https://github.com/congiuluc/token-saver"
homepage = "https://github.com/congiuluc/token-saver"
documentation = "https://congiuluc.github.io/token-saver/"
keywords = ["cli", "developer-tools", "summarization", "terminal", "tokens"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "token-saver"
path = "src/main.rs"

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"

[dependencies]
tiktoken-rs = "0.12"
